--- a/sample_78.html
+++ b/sample_78.html
@@ -29,7 +29,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <!-- change the href and the text to exactly match your page number -->
-              <a class="dropdown-item" href="sample_78.html">sample page number</a>
+              <a class="dropdown-item" href="sample_78.html">sample 78</a>
             </div>
           </li>
         </ul>
